增加天气查询Api

--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -13,8 +13,12 @@
         android:id="@+id/navigationReport"
         android:icon="@drawable/setting_menu"
         android:title="@string/bottom_title_report" />
-<!--    <item-->
-<!--        android:id="@+id/navigationUser"-->
-<!--        android:icon="@drawable/ic_launcher_code"-->
-<!--        android:title="@string/bottom_title_user" />-->
+    <item
+        android:id="@+id/navigationUser"
+        android:icon="@drawable/ic_launcher_code"
+        android:title="@string/bottom_title_user" />
+    <item
+        android:id="@+id/navigationWeather"
+        android:icon="@drawable/ic_launcher_code"
+        android:title="@string/bottom_title_weather" />
 </menu>
