--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2b9247</color>
+    <color name="green_577">#008577</color>
     <color name="green_light">#00cd66</color>
     <color name="line">#EEE</color>
     <color name="gray_light">#EDEBEC</color>
