--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/mainViewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/mainNavigation" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/mainNavigation"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorWhite"
-            app:itemIconTint="@drawable/selector_nav_color"
-            app:itemTextColor="@drawable/selector_nav_color"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/main_navigation" />
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
