--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,274 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shape_home_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.xysss.keeplearning.app.widget.CustomToolBar
-        android:id="@+id/customToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
     <LinearLayout
-        android:id="@+id/blueLink"
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
         android:orientation="horizontal"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="20dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/blueTv"
+        android:background="@color/color_FEC"
+        tools:ignore="MissingConstraints">
+
+        <TextClock
             android:layout_width="wrap_content"
-            android:text="未连接设备"
-            android:textSize="13sp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/blueLinkImg"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_gravity="center"
-            android:src="@drawable/no_connected_icon"
-            android:layout_height="wrap_content"/>
+            android:format24Hour="yyyy年MM月dd日 E HH:mm:ss"/>
+
+
+
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/testBackgroundImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/test_background"
-        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <ImageView
-        android:id="@+id/testImg"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/start_icon"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/testText"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="65dp"
-        android:textSize="20sp"
-        android:text="开始"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:id="@+id/concentrationNum"
-        android:layout_width="wrap_content"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="45sp"
-        android:text="6688"
-        android:includeFontPadding="false"
-        android:textColor="@color/color_AFF"
-        app:layout_constraintTop_toBottomOf="@+id/testBackgroundImg"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <TextView
-        android:id="@+id/concentrationUnit"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="12dp"
-        android:textSize="20sp"
-        android:text="ppm"
-        android:textColor="@color/color_AFF"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/testBackgroundImg"
-        app:layout_constraintLeft_toRightOf="@+id/concentrationNum"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/materialName"
-        android:layout_width="wrap_content"
-        android:textSize="20sp"
-        android:text="异丁烯"
-        android:gravity="center"
-        android:textColor="@color/color_AFF"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/concentrationNum"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/toServiceBackImg"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/to_service_background"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialName" />
-
-    <ImageView
-        android:id="@+id/to_service_icon_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/to_service_icon"
-        android:layout_marginTop="88dp"
-        android:layout_marginStart="75dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialName" />
-
-    <TextView
-        android:id="@+id/servicesTex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="14dp"
-        android:text="开启上传"
-        android:textSize="20sp"
-        android:textColor="@color/color_995"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/to_service_icon_img" />
-
-    <ImageView
-        android:id="@+id/synRecordBackgroundImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:src="@drawable/syn_record_background"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/materialName" />
-
-    <ImageView
-        android:id="@+id/syn_record_icon_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/syn_record_icon"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="77dp"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/materialName" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:textColor="@color/color_9FB"
-        android:text="同步数据信息"
-        android:textSize="20sp"
-        android:layout_marginTop="14dp"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/syn_record_icon_img" />
-
-    <ImageView
-        android:id="@+id/synAlarmBackgroundImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/syn_alarm_background"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/synRecordBackgroundImg" />
-
-    <ImageView
-        android:id="@+id/syn_alarm_icon_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/syn_alarm_icon"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="77dp"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/synRecordBackgroundImg" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="同步报警信息"
-        android:textSize="20sp"
-        android:layout_marginTop="14dp"
-        android:textColor="@color/color_92D"
-        app:layout_constraintLeft_toRightOf="@+id/toServiceBackImg"
-        app:layout_constraintTop_toBottomOf="@+id/syn_alarm_icon_img" />
-
-    <LinearLayout
-        android:visibility="invisible"
-        android:id="@+id/syn_lin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toServiceBackImg"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:visibility="invisible"
-            android:id="@+id/syn_history_icon_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/syn_history_icon" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="同步中"
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            android:layout_marginStart="7dp" />
-        <TextView
-            android:id="@+id/syn_num_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            android:layout_marginStart="1dp" />
-    </LinearLayout>
-
-    <!--    android:indeterminate="true"-->
-    <ProgressBar
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:id="@+id/progress_bar"
-        android:progressDrawable="@drawable/progress_bg"
-        android:max="100"
-        app:layout_constraintTop_toBottomOf="@+id/syn_lin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        style="?android:attr/progressBarStyleHorizontal"/>
-
-    <TextView
-        android:visibility="invisible"
-        android:id="@+id/numShowText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0/0"
-        android:textColor="@color/white"
-        android:textSize="11sp"
-        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="20dp" />
-
-
-
-
-
-
-
-
-
 
 
 
@@ -284,9 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <Button
             android:id="@+id/loginBtn"
@@ -372,7 +126,7 @@
             app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
         <Button
-            android:id="@+id/linkBlueTooth"
+            android:id="@+id/linkSerialPort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="点击去连接ble蓝牙"
