--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,77 +1,267 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout_one"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shape_home_background"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/shape_home_background">
 
-    <Button
-        android:id="@+id/navBtn"
-        android:layout_width="42px"
-        android:layout_height="32px"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="15dp"
-        android:background="@drawable/ic_home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line1_one" />
-
-    <TextView
-        android:id="@+id/placeName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="9dp"
-        android:textColor="#F1F9FF"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/line1_one"
-        app:layout_constraintLeft_toRightOf="@+id/navBtn"
-        android:text="顺义区今日天气"/>
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint1_one"
-        android:layout_marginTop="9dp"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="#66FFFFFF"
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:id="@+id/weatherLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/searchPlaceBtn"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:layout_marginStart="30px"
+                    android:layout_marginTop="30px"
+                    android:background="@drawable/ic_home"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/placeName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17px"
+                    android:layout_marginTop="38px"
+                    android:text="顺义区今日天气"
+                    android:textColor="#F1F9FF"
+                    android:textSize="32px"
+                    app:layout_constraintStart_toEndOf="@+id/searchPlaceBtn"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint1_one"
+                    android:layout_width="1220px"
+                    android:layout_height="170px"
+                    android:layout_marginStart="30px"
+                    android:layout_marginTop="9dp"
+                    android:background="#66FFFFFF"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/placeName"
+                    app:layout_goneMarginTop="18px">
+
+                    <ImageView
+                        android:id="@+id/image1_one"
+                        android:layout_width="110px"
+                        android:layout_height="110px"
+                        android:layout_marginStart="36px"
+                        android:layout_marginTop="30px"
+                        android:src="@drawable/fine_day_icon"
+                        app:layout_constraintStart_toStartOf="@+id/constraint1_one"
+                        app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
+
+                    <TextView
+                        android:id="@+id/humidity_one"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30px"
+                        android:layout_marginTop="64px"
+                        android:text="19°C/7°C"
+                        android:textColor="#1A47A4"
+                        android:textSize="40px"
+                        app:layout_constraintStart_toEndOf="@id/image1_one"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/image2_one"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_marginStart="56px"
+                        android:layout_marginTop="34px"
+                        android:src="@drawable/humidity_icon"
+                        app:layout_constraintStart_toEndOf="@+id/humidity_one"
+                        app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
+
+                    <TextView
+                        android:id="@+id/tV2_one"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10px"
+                        android:layout_marginTop="32px"
+                        android:text="湿度：30%"
+                        android:textColor="#1E4BA5"
+                        android:textSize="30px"
+                        app:layout_constraintStart_toEndOf="@+id/image2_one"
+                        app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
+
+                    <ImageView
+                        android:id="@+id/image3_one"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_marginStart="376px"
+                        android:layout_marginTop="34px"
+                        android:src="@drawable/visibility_icon"
+                        app:layout_constraintStart_toEndOf="@+id/image2_one"
+                        app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10px"
+                        android:layout_marginTop="32px"
+                        android:text="能见度：9.66公里"
+                        android:textColor="#1E4BA5"
+                        android:textSize="30px"
+                        app:layout_constraintStart_toEndOf="@+id/image3_one"
+                        app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
+
+                    <View
+                        android:id="@+id/view1_one"
+                        android:layout_width="780px"
+                        android:layout_height="1px"
+                        android:layout_marginStart="252px"
+                        android:layout_marginTop="20px"
+                        android:background="#CAD7EF"
+                        app:layout_constraintStart_toEndOf="@+id/image1_one"
+                        app:layout_constraintTop_toBottomOf="@+id/tV2_one" />
+
+                    <ImageView
+                        android:id="@+id/image4_one"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_marginStart="56px"
+                        android:layout_marginTop="20px"
+                        android:src="@drawable/wind_speed_icon"
+                        app:layout_constraintStart_toEndOf="@+id/humidity_one"
+                        app:layout_constraintTop_toBottomOf="@+id/view1_one" />
+
+                    <TextView
+                        android:id="@+id/tV4_one"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10px"
+                        android:layout_marginTop="20px"
+                        android:text="风速：6公里/小时"
+                        android:textColor="#1E4BA5"
+                        android:textSize="30px"
+                        app:layout_constraintStart_toEndOf="@+id/image2_one"
+                        app:layout_constraintTop_toBottomOf="@+id/view1_one" />
+
+                    <ImageView
+                        android:id="@+id/image5_one"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_marginStart="376px"
+                        android:layout_marginTop="20px"
+                        android:src="@drawable/ultraviolet_icon"
+                        app:layout_constraintStart_toEndOf="@+id/image4_one"
+                        app:layout_constraintTop_toBottomOf="@+id/view1_one" />
+
+                    <TextView
+                        android:id="@+id/tV5_one"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10px"
+                        android:layout_marginTop="20px"
+                        android:text="紫外线指数：8（最大10)"
+                        android:textColor="#1E4BA5"
+                        android:textSize="30px"
+                        app:layout_constraintStart_toEndOf="@+id/image5_one"
+                        app:layout_constraintTop_toBottomOf="@+id/view1_one" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <Button
+                    android:id="@+id/button2_one"
+                    android:layout_width="42px"
+                    android:layout_height="23px"
+                    android:layout_marginStart="30px"
+                    android:layout_marginTop="45px"
+                    android:background="@drawable/yellow_icon"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraint1_one" />
+
+                <TextView
+                    android:id="@+id/tV1_one"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17px"
+                    android:layout_marginTop="38px"
+                    android:text="近七日天气情况"
+                    android:textColor="#F1F9FF"
+                    android:textSize="32px"
+                    app:layout_constraintStart_toEndOf="@+id/button2_one"
+                    app:layout_constraintTop_toBottomOf="@+id/constraint1_one" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20px"
+                    android:orientation="vertical"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tV1_one">
+
+                    <include
+                        android:id="@+id/forecastInclude"
+                        layout="@layout/forecast" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:layout_width="800px"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/color_577"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeName">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/humidity_one"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/bgImageView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="湿度"
-            android:textColor="#1E4BA5"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/bg_place" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <FrameLayout
+            android:id="@+id/actionBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/color_577">
 
-    <TextView
-        android:id="@+id/tV2_one"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="9dp"
-        android:textColor="#F1F9FF"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/constraint1_one"
-        app:layout_constraintLeft_toRightOf="@+id/navBtn"
-        android:text="顺义区今日天气"/>
+            <EditText
+                android:id="@+id/searchPlaceEdit"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/search_bg"
+                android:hint="输入地址"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp" />
+        </FrameLayout>
 
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/actionBarLayout"
+            android:visibility="gone" />
+    </RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
