完善首页UI和天气获取逻辑

--- a/app/src/main/res/layout/life_index.xml
+++ b/app/src/main/res/layout/life_index.xml
@@ -127,23 +127,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toEndOf="@id/ultravioletImg"
                     android:layout_marginStart="20dp"
+                    android:layout_toEndOf="@id/ultravioletImg"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="实时紫外线" />
+                        android:text="实时紫外线"
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/ultravioletText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:textSize="16sp"
-                        android:textColor="?android:attr/textColorPrimary" />
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:textSize="16sp" />
                 </LinearLayout>
 
             </RelativeLayout>
