--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -112,6 +112,7 @@
                         app:layout_constraintTop_toTopOf="@+id/constraint1_one" />
 
                     <TextView
+                        android:id="@+id/tV3_one"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10px"
