--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -207,6 +207,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20px"
                     android:orientation="vertical"
+                    android:background="#00000000"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tV1_one">
 
