--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -10,6 +10,8 @@
     <TextView
         android:id="@+id/dateInfo"
         android:layout_width="0dp"
+        android:textColor="#F1F9FF"
+        android:textSize="32px"
         android:text="2022-05-30"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -23,7 +25,9 @@
 
     <TextView
         android:id="@+id/skyInfo"
+        android:textColor="#F1F9FF"
         android:layout_width="0dp"
+        android:textSize="32px"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="3"
@@ -33,8 +37,10 @@
     <TextView
         android:id="@+id/temperatureInfo"
         android:layout_width="0dp"
+        android:textColor="#F1F9FF"
         android:layout_height="wrap_content"
         android:text="15～30度"
+        android:textSize="32px"
         android:layout_gravity="center_vertical"
         android:layout_weight="3"
         android:gravity="end" />
